@@ -57,6 +57,12 @@ us a note on ns-developers mailing list.</p>
 </ul>
 <h2>Changes to existing API:</h2>
 <ul>
+  <li>
+    Added the possibility of setting the z coordinate for many
+    position-allocation classes: GridPositionAllocator,
+    RandomRectanglePositionAllocator, RandomDiscPositionAllocator,
+    UniformDiscPositionAllocator.
+  </li>
 </ul>
 <h2>Changes to build system:</h2>
 <ul>
